# wildlens

./: .gitignore  README.md  better_csv.py  infos_especes_lieu.csv  model_empreintes_mammiferes.py  modele_hybride_empreintes.py  pyproject.toml  test.ipynb
models/: keras_model.h5
test-image/: test.py
webui/: manage.py  pyproject.toml  requirements.txt
webui/wildlenswebui/: admin.py  asgi.py  forms.py  ml_model.py  models.py  settings.py  urls.py  views.py  wsgi.py
webui/wildlenswebui/management/commands/: import_animals.py
webui/wildlenswebui/migrations/: 0001_initial.py  0002_remove_animal_empreinte_analysis.py
webui/wildlenswebui/model/: labels.txt
webui/wildlenswebui/templates/wildlenswebui/: base.html  home.html  index.html  scan.html
