[project]
name = "wildlens"
version = "0.1.0"
description = ""
authors = [
    {name = "BahAilime",email = "emilia.beguin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
